fix(mongo): pass the right schema for ES

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
@@ -19,13 +19,13 @@ spec:
           apiVersion: generators.external-secrets.io/v1alpha1
           kind: Password
           name: root-password
-      # rewrite:
+      rewrite:
       #   - regexp:
       #       source: password
       #       target: rootPassword
-      transform:
-        template: |
-          rootPassword: "{{ .password | toString -}}"
+        transform:
+          template: |
+            rootPassword: "{{ .password | toString -}}"
 
   target:
     immutable: false
