fix(mongo): another modification to the schema of ES

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
@@ -20,12 +20,12 @@ spec:
           kind: Password
           name: root-password
       rewrite:
-      #   - regexp:
-      #       source: password
-      #       target: rootPassword
-        transform:
-          template: |
-            rootPassword: "{{ .password | toString -}}"
+        #   - regexp:
+        #       source: password
+        #       target: rootPassword
+        - transform:
+            template: |
+              rootPassword: "{{ .password | toString -}}"
 
   target:
     immutable: false
