chore(mongodb): add the transform again

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
@@ -14,19 +14,18 @@ spec:
         - regexp:
             source: password
             target: appPassword
-    # - sourceRef:
-    #     generatorRef:
-    #       apiVersion: generators.external-secrets.io/v1alpha1
-    #       kind: Password
-    #       name: root-password
-    #   rewrite:
-    #     #   - regexp:
-    #     #       source: password
-    #     #       target: rootPassword
-    #     - transform:
-    #         template: |
-    #           rootPassword: "{{ .password | toString -}}"
-
+    - sourceRef:
+        generatorRef:
+          apiVersion: generators.external-secrets.io/v1alpha1
+          kind: Password
+          name: root-password
+      rewrite:
+        #   - regexp:
+        #       source: password
+        #       target: rootPassword
+        - transform:
+            template: |
+              rootPassword: "{{ .password | toString -}}"
   target:
     immutable: false
     template:
