chore(mongo): give up on transform altogether

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
@@ -20,12 +20,9 @@ spec:
           kind: Password
           name: root-password
       rewrite:
-        #   - regexp:
-        #       source: password
-        #       target: rootPassword
-        - transform:
-            template: |
-              rootPassword: "{{ .password | toString -}}"
+          - regexp:
+              source: password
+              target: rootPassword
   target:
     immutable: false
     template:
