chore(mongo): install the helm-release, finally

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
@@ -9,7 +9,7 @@ resources:
   - root-password.yml
   - password.yml
   - secrets.yml
-  # - release.yml
+  - release.yml
 
 configurations:
   - kustomizeconfig.yml
