--- a/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
@@ -13,22 +13,6 @@ spec:
       rewrite:
         - regexp:
             source: password
-            target: appPassword
-    - sourceRef:
-        generatorRef:
-          apiVersion: generators.external-secrets.io/v1alpha1
-          kind: Password
-          name: root-password
-      rewrite:
-          - regexp:
-              source: password
-              target: rootPassword
+            target: MONGO_INITDB_ROOT_PASSWORD
   target:
-    immutable: false
-    template:
-      data:
-        values.yaml: |
-          auth:
-            rootPassword: "{{ .rootPassword | toString -}}"
-            passwords:
-              - "{{ .appPassword | toString -}}"
+    name: mongodb-secrets
