fix(mongo): modify reference to k8s secret

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/push-secret.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/push-secret.yml
@@ -12,6 +12,9 @@ spec:
   selector:
     secret:
       name: mongodb-secrets
+  template:
+    data:
+      password: "{{ .MONGO_INITDB_ROOT_PASSWORD }}"
   data:
     - match:
         secretKey: password
