chore(hetzner) allow all ports to admin

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/push-secret.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/push-secret.yml
@@ -12,11 +12,8 @@ spec:
   selector:
     secret:
       name: mongodb-secrets
-  template:
-    data:
-      password: "{{ .MONGO_INITDB_ROOT_PASSWORD }}"
   data:
     - match:
-        secretKey: password
+        secretKey: MONGO_INITDB_ROOT_PASSWORD
         remoteRef:
           remoteKey: /mongodb/password
