chore: remove dash from non-dashed name

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
@@ -7,7 +7,7 @@ resources:
   - namespace.yml
   - password.yml
   - secrets.yml
-  - push-secret.yml
+  - pushsecret.yml
   - statefulset.yml
 
 images:
