chore(mongo): spin up mongo client for test

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
@@ -6,7 +6,7 @@ configMapGenerator:
 resources:
   - namespace.yml
   - password.yml
-  - secrets.yml
+  - externalsecret.yml
   - pushsecret.yml
   - statefulset.yml
 
