fix(mongo): create headless service

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/kustomization.yml
@@ -8,7 +8,22 @@ resources:
   - password.yml
   - externalsecret.yml
   - pushsecret.yml
+  - service.yml
   - statefulset.yml
+
+replacements:
+  - source:
+      kind: StatefulSet
+      name: mongodb
+      fieldPath: spec.template.metadata.labels
+    targets:
+      - select:
+          kind: Service
+          name: mongodb-headless
+        fieldPaths:
+          - spec.selector
+        options:
+          create: true
 
 images:
   - name: mongo
