fix(mongo): do not update mongo password

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/pushsecret.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/pushsecret.yml
@@ -3,7 +3,7 @@ kind: PushSecret
 metadata:
   name: mongodb
 spec:
-  updatePolicy: Replace
+  updatePolicy: IfNotExists
   deletionPolicy: Delete
   refreshInterval: 2m
   secretStoreRefs:
