--- a/kubernetes/hetzner-personal/helm-releases/mongodb/statefulset.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/statefulset.yml
@@ -3,7 +3,7 @@ kind: StatefulSet
 metadata:
   name: mongodb
 spec:
-  serviceName: mongodb
+  serviceName: mongodb-headless
   replicas: 1
   selector:
     matchLabels:
