fix(mongo-client): bring back the pod name to the dns of mongo

--- a/kubernetes/hetzner-personal/helm-releases/mongo-client/externalsecret.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongo-client/externalsecret.yml
@@ -15,6 +15,6 @@ spec:
     immutable: false
     template:
       data:
-        MONGO_DSN: mongodb://app:{{ .mongodbPassword | toString }}@mongodb-headless.mongodb:27017/app?authSource=admin
+        MONGO_DSN: mongodb://app:{{ .mongodbPassword | toString }}@mongodb-0.mongodb-headless.mongodb:27017/app?authSource=admin
       mergePolicy: Replace
       type: Opaque
