--- a/kubernetes/hetzner-personal/helm-releases/mongodb/password.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/password.yml
@@ -2,6 +2,8 @@ apiVersion: generators.external-secrets.io/v1alpha1
 kind: Password
 metadata:
   name: mongo-password
+  annotations:
+    kustomize.toolkit.fluxcd.io/reconcile: disabled
 spec:
   allowRepeat: false
   noUpper: false
