chore(mongo): remove flux annotation from password

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/pushsecret.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/pushsecret.yml
@@ -3,6 +3,7 @@ kind: PushSecret
 metadata:
   name: mongodb
 spec:
+  updatePolicy: IfNotExists
   deletionPolicy: Delete
   refreshInterval: 2m
   secretStoreRefs:
