--- a/kubernetes/hetzner-personal/kustomization.yml
+++ b/kubernetes/hetzner-personal/kustomization.yml
@@ -1,6 +1,4 @@
 resources:
   - ./namespaces/gotk-sync.yml
   - ./helm-releases/gotk-sync.yml
-  # - ./networking/gotk-sync.yml
-  # - ./gateway/gotk-sync.yml
-  # - ./applications/gotk-sync.yml
+  - ./applications/gotk-sync.yml
