--- a/kubernetes/hetzner-personal/helm-releases/cert-manager/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/cert-manager/helm-release.yml
@@ -1,48 +1,35 @@
----
-apiVersion: v1
-kind: List
-items:
-  - apiVersion: source.toolkit.fluxcd.io/v1beta2
-    kind: HelmRepository
-    metadata:
-      name: cert-manager
-      namespace: flux-system
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: cert-manager
+spec:
+  chart:
     spec:
-      interval: 60m
-      url: https://charts.jetstack.io
-  - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-    kind: HelmRelease
-    metadata:
-      name: cert-manager
-      namespace: flux-system
-    spec:
-      chart:
-        spec:
-          chart: cert-manager
-          sourceRef:
-            kind: HelmRepository
-            name: cert-manager
-          version: v1.14.x
-      install:
-        crds: Create
-        createNamespace: true
-        remediation:
-          retries: 3
-        skipCRDs: false
-      interval: 30m
-      maxHistory: 10
-      releaseName: cert-manager
-      targetNamespace: cert-manager
-      test:
-        enable: true
-        ignoreFailures: true
-        timeout: 1m
-      timeout: 10m
-      upgrade:
-        cleanupOnFail: true
-        crds: CreateReplace
-        remediation:
-          remediateLastFailure: true
-      valuesFrom:
-        - kind: ConfigMap
-          name: cert-manager-config
+      chart: cert-manager
+      sourceRef:
+        kind: HelmRepository
+        name: cert-manager
+      version: v1.14.x
+  install:
+    crds: Create
+    createNamespace: true
+    remediation:
+      retries: 3
+    skipCRDs: false
+  interval: 30m
+  maxHistory: 10
+  releaseName: cert-manager
+  targetNamespace: cert-manager
+  test:
+    enable: true
+    ignoreFailures: true
+    timeout: 1m
+  timeout: 10m
+  upgrade:
+    cleanupOnFail: true
+    crds: CreateReplace
+    remediation:
+      remediateLastFailure: true
+  valuesFrom:
+    - kind: ConfigMap
+      name: cert-manager-config
