--- a/kubernetes/hetzner-personal/network/kustomization.yml
+++ b/kubernetes/hetzner-personal/network/kustomization.yml
@@ -2,3 +2,4 @@ resources:
   - ./cluster-issuer/kustomize.yml
   - ./certificate/kustomize.yml
   - ./gateway/kustomize.yml
+  - ./openid-configuration/kustomize.yml
