fix: change names to openid-config

--- a/kubernetes/hetzner-personal/network/openid-configuration/kustomization.yml
+++ b/kubernetes/hetzner-personal/network/openid-configuration/kustomization.yml
@@ -10,12 +10,12 @@ images:
 replacements:
   - source:
       kind: Deployment
-      name: static-web-server
+      name: openid-configuration
       fieldPath: spec.template.metadata.labels
     targets:
       - select:
           kind: Service
-          name: static-web-server
+          name: openid-configuration
         fieldPaths:
           - spec.selector
         options:
