--- a/kubernetes/hetzner-personal/network/openid-configuration/service.yml
+++ b/kubernetes/hetzner-personal/network/openid-configuration/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: static-web-server
+  name: openid-configuration
 spec:
   ports:
     - name: https
