--- a/kubernetes/hetzner-personal/network/openid-configuration/httproute.yml
+++ b/kubernetes/hetzner-personal/network/openid-configuration/httproute.yml
@@ -10,42 +10,42 @@ spec:
       namespace: cert-manager
       sectionName: http
   rules:
-    filters:
-      - responseHeaderModifier:
-          set:
-            - name: Access-Control-Allow-Credentials
-              value: "true"
-            - name: Access-Control-Allow-Headers
-              value: "*"
-            - name: Access-Control-Allow-Methods
-              value: GET, PUT, POST, DELETE, OPTIONS
-            - name: Access-Control-Allow-Origin
-              value: "*"
-            - name: Cache-Control
-              value: no-cache, no-store
-            - name: Content-Security-Policy
-              value: default-src 'self'; object-src 'none'; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content
-            - name: Cross-Origin-Embedder-Policy
-              value: unsafe-none
-            - name: Cross-Origin-Opener-Policy
-              value: unsafe-none
-            - name: Cross-Origin-Resource-Policy
-              value: cross-origin
-            - name: Referrer-Policy
-              value: unsafe-url
-            - name: Strict-Transport-Security
-              value: max-age=31536000; includeSubDomains; preload
-            - name: X-Content-Type-Options
-              value: nosniff
-            - name: X-Permitted-Cross-Domain-Policies
-              value: none
-            - name: X-XSS-Protection
-              value: "0"
-        type: ResponseHeaderModifier
-    matches:
-      - path:
-          type: Exact
-          value: /.well-known/openid-configuration
-      - path:
-          type: Exact
-          value: /openid/v1/jwks
+    - filters:
+        - responseHeaderModifier:
+            set:
+              - name: Access-Control-Allow-Credentials
+                value: "true"
+              - name: Access-Control-Allow-Headers
+                value: "*"
+              - name: Access-Control-Allow-Methods
+                value: GET, PUT, POST, DELETE, OPTIONS
+              - name: Access-Control-Allow-Origin
+                value: "*"
+              - name: Cache-Control
+                value: no-cache, no-store
+              - name: Content-Security-Policy
+                value: default-src 'self'; object-src 'none'; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content
+              - name: Cross-Origin-Embedder-Policy
+                value: unsafe-none
+              - name: Cross-Origin-Opener-Policy
+                value: unsafe-none
+              - name: Cross-Origin-Resource-Policy
+                value: cross-origin
+              - name: Referrer-Policy
+                value: unsafe-url
+              - name: Strict-Transport-Security
+                value: max-age=31536000; includeSubDomains; preload
+              - name: X-Content-Type-Options
+                value: nosniff
+              - name: X-Permitted-Cross-Domain-Policies
+                value: none
+              - name: X-XSS-Protection
+                value: "0"
+          type: ResponseHeaderModifier
+      matches:
+        - path:
+            type: Exact
+            value: /.well-known/openid-configuration
+        - path:
+            type: Exact
+            value: /openid/v1/jwks
