fix: remove creation from hostpath

--- a/kubernetes/hetzner-personal/network/openid-configuration/deployment.yml
+++ b/kubernetes/hetzner-personal/network/openid-configuration/deployment.yml
@@ -45,5 +45,5 @@ spec:
       volumes:
         - hostPath:
             path: /var/www/static-web-server
-            type: DirectoryOrCreate
+            type: Directory
           name: static-content
