fix: listen on HTTPS for OIDC

--- a/kubernetes/hetzner-personal/network/openid-configuration/httproute.yml
+++ b/kubernetes/hetzner-personal/network/openid-configuration/httproute.yml
@@ -8,7 +8,7 @@ spec:
       kind: Gateway
       name: developer-friendly-blog
       namespace: cert-manager
-      sectionName: http
+      sectionName: https
   rules:
     - filters:
         - responseHeaderModifier:
