--- a/kubernetes/hetzner-personal/network/openid-configuration/service.yml
+++ b/kubernetes/hetzner-personal/network/openid-configuration/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: openid-configuration
 spec:
   ports:
-    - name: https
+    - name: http
       port: 80
-      targetPort: https
+      targetPort: http
   type: ClusterIP
