--- a/kubernetes/hetzner-personal/network/openid-configuration/deployment.yml
+++ b/kubernetes/hetzner-personal/network/openid-configuration/deployment.yml
@@ -13,17 +13,23 @@ spec:
         app: openid-configuration
     spec:
       containers:
-        - args:
-            - --host=0.0.0.0
-            - --port=8080
-            - --root=.
-            - --log-level=info
-            - --compression
-            - --health
-            - --experimental-metrics
-          command:
-            - /static-web-server
-          image: ghcr.io/static-web-server/static-web-server
+        # - args:
+        #     - --host=0.0.0.0
+        #     - --port=8080
+        #     - --root=.
+        #     - --log-level=info
+        #     - --compression
+        #     - --health
+        #     - --experimental-metrics
+        #   command:
+        #     - /static-web-server
+        - command:
+            - sh
+            - -c
+          args:
+            - python -m http.server -d . 8080
+          # image: ghcr.io/static-web-server/static-web-server
+          image: python:3.12-alpine
           name: static-web-server
           ports:
             - containerPort: 8080
