--- a/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: applications
+  name: listmonk
   namespace: flux-system
 spec:
   force: false
