--- a/kubernetes/hetzner-personal/applications/listmonk/statefulset.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/statefulset.yml
@@ -13,6 +13,27 @@ spec:
       labels:
         app: listmonk
     spec:
+      initContainers:
+        - command:
+            - ./listmonk
+            - --idempotent
+            - --install
+            - --yes
+          envFrom:
+            - configMapRef:
+                name: listmonk
+            - secretRef:
+                name: listmonk
+          image: listmonk/listmonk
+          name: migrations
+          ports:
+            - containerPort: 9000
+              name: http
+          securityContext:
+            readOnlyRootFilesystem: true
+          volumeMounts:
+            - mountPath: /listmonk/uploads
+              name: uploads
       containers:
         - command:
             - ./listmonk
