chore: add logo to listmonk static

--- a/kubernetes/hetzner-personal/applications/listmonk/configs.env
+++ b/kubernetes/hetzner-personal/applications/listmonk/configs.env
@@ -2,3 +2,5 @@ LISTMONK_app__address=0.0.0.0:9000
 LISTMONK_db__port=5432
 LISTMONK_db__database=listmonk
 LISTMONK_db__ssl_mode=require
+
+LOGO_URL=https://developer-friendly.blog/assets/logo.webp
