chore: add pgcheck and mount config to static

--- a/kubernetes/hetzner-personal/applications/listmonk/configs.env
+++ b/kubernetes/hetzner-personal/applications/listmonk/configs.env
@@ -4,3 +4,5 @@ LISTMONK_db__database=listmonk
 LISTMONK_db__ssl_mode=require
 
 LOGO_URL=https://developer-friendly.blog/assets/logo.webp
+
+POSTGRES_HEALTHCHECK_INTERVAL_SECONDS=30
