--- a/kubernetes/hetzner-personal/applications/listmonk/kustomization.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/kustomization.yml
@@ -12,6 +12,8 @@ configMapGenerator:
 images:
   - name: listmonk/listmonk
     newTag: v3.0.0
+  - name: postgres
+    newTag: 16-alpine
 
 replacements:
   - source:
