--- a/kubernetes/hetzner-personal/applications/listmonk/statefulset.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/statefulset.yml
@@ -35,6 +35,33 @@ spec:
               name: uploads
             - mountPath: /listmonk/static
               name: static
+        - args:
+            - |
+              set -eu
+
+              interval=$POSTGRES_HEALTHCHECK_INTERVAL_SECONDS
+
+              alias check="pg_isready \
+                --host=$LISTMONK_db__host \
+                --username=$LISTMONK_db__user \
+                --dbname=$LISTMONK_db__database \
+                --password=$LISTMONK_db__password"
+
+              while sleep $interval; do
+                check
+              done
+          command:
+            - sh
+            - -c
+          envFrom:
+            - configMapRef:
+                name: listmonk
+            - secretRef:
+                name: listmonk
+          image: postgres
+          name: postgres
+          securityContext:
+            readOnlyRootFilesystem: true
       initContainers:
         - command:
             - ./listmonk
@@ -57,10 +84,15 @@ spec:
             - mountPath: /listmonk/uploads
               name: uploads
         - args:
-            - curl -LO $LOGO_URL
+            - |
+              set -eu
+              curl -LO $LOGO_URL
           command:
             - sh
             - -c
+          envFrom:
+            - configMapRef:
+                name: listmonk
           image: curlimages/curl
           name: static
           securityContext:
