fix: force statefulset update fields

--- a/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
@@ -4,7 +4,7 @@ metadata:
   name: listmonk
   namespace: flux-system
 spec:
-  force: false
+  force: true
   interval: 10m0s
   path: ./kubernetes/hetzner-personal/applications/listmonk
   prune: true
