--- a/ansible/roles/cilium/tasks/main.yml
+++ b/ansible/roles/cilium/tasks/main.yml
@@ -3,18 +3,12 @@
   ansible.builtin.pip:
     name: kubernetes<30
     state: present
+    extra_args: --break-system-packages
 - name: Install helm binary
   block:
-    - name: Download helm install script
-      ansible.builtin.get_url:
-        url: https://git.io/get_helm.sh
-        dest: /tmp/get_helm.sh
-        mode: "0755"
-        owner: "{{ ansible_env.SUDO_USER }}"
-        group: "{{ ansible_env.SUDO_USER }}"
     - name: Run helm install script
       ansible.builtin.shell:
-        cmd: /tmp/get_helm.sh
+        cmd: "{{ lookup('url', 'https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3', split_lines=False) }}"
         creates: /usr/local/bin/helm
       environment:
         DESIRED_VERSION: "{{ helm_version }}"
