chore(RP): add pvc to home-assistant

--- a/kubernetes/raspberry-pi/home-assistant/configuration.yaml
+++ b/kubernetes/raspberry-pi/home-assistant/configuration.yaml
@@ -1,14 +1,6 @@
-# home-assistant:
-#   name: Meysam
-#   latitude: 1
-#   longitude: 1
-#   elevation: 0
-#   unit_system: metric
-#   currency: GBP
-#   external_url: "http://example.com"
-#   internal_url: "http://home.example.com"
-#   allow_external_scripts: false
-#   legacy_templates: true
+homeassistant:
+  name: Meysam
+  unit_system: metric
 
 http:
   use_x_forwarded_for: true
