--- a/kubernetes/raspberry-pi/main.yml
+++ b/kubernetes/raspberry-pi/main.yml
@@ -4,7 +4,7 @@ metadata:
   name: root
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1m
   path: ./kubernetes/raspberry-pi
   prune: true
   sourceRef:
