--- a/kubernetes/raspberry-pi/home-assistant/deployment.yml
+++ b/kubernetes/raspberry-pi/home-assistant/deployment.yml
@@ -37,7 +37,7 @@ spec:
           configMap:
             name: home-assistant
         - name: data
-          PersistentVolumeClaim:
+          persistentVolumeClaim:
             claimName: home-assistant
         - name: dbus-volume
           hostPath:
