--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
       - id: detect-aws-credentials
       - id: detect-private-key
       - id: end-of-file-fixer
+        exclude: .*kubernetes/raspberry-pi/mosquitto/password_file$
       - id: file-contents-sorter
       - id: requirements-txt-fixer
       - id: sort-simple-yaml
