--- a/kubernetes/raspberry-pi/home-assistant/configuration.yaml
+++ b/kubernetes/raspberry-pi/home-assistant/configuration.yaml
@@ -5,8 +5,13 @@ homeassistant:
 switch:
   - platform: orvibo
 
+cloud:
+
 http:
   use_x_forwarded_for: true
   trusted_proxies:
     - 192.168.11.130
     - 20.0.0.96
+
+tts:
+  - platform: google_translate
