--- a/kubernetes/raspberry-pi/mosquitto/kustomization.yml
+++ b/kubernetes/raspberry-pi/mosquitto/kustomization.yml
@@ -4,7 +4,7 @@ resources:
   - deployment.yml
 
 configMapGenerator:
-  - name: mosquitto-config
+  - name: mosquitto-conf
     files:
       - mosquitto.conf
 
