fix(RP): use CM for mosquitto

--- a/kubernetes/raspberry-pi/mosquitto/deployment.yml
+++ b/kubernetes/raspberry-pi/mosquitto/deployment.yml
@@ -57,8 +57,8 @@ spec:
           persistentVolumeClaim:
             claimName: mosquitto-data
         - name: mosquitto-conf
-          persistentVolumeClaim:
-            claimName: mosquitto-conf
+          configMap:
+            name: mosquitto-conf
         - name: mosquitto-password
           secret:
             secretName: mosquitto-password
