--- a/ansible/hetzner/main.yml
+++ b/ansible/hetzner/main.yml
@@ -4,6 +4,8 @@
   name: Configure monitoring
   roles:
     - monitoring
+  tags:
+    - monitoring
   vars_files:
     - ./vars.yml
 - become: true
