fix(hetzner): specify namespace for static web server

--- a/kubernetes/hetzner-personal/applications/static-web-server/deployment.yml
+++ b/kubernetes/hetzner-personal/applications/static-web-server/deployment.yml
@@ -50,6 +50,7 @@ spec:
               name: config-volume
               readOnly: true
               subPath: config.toml
+          workingDir: /var/public
       initContainers:
         - args:
             - |
