fix(hetzner): pass the required envs to init container

--- a/kubernetes/hetzner-personal/applications/static-web-server/deployment.yml
+++ b/kubernetes/hetzner-personal/applications/static-web-server/deployment.yml
@@ -60,6 +60,9 @@ spec:
           command:
             - sh
             - "-c"
+          envFrom:
+            - configMapRef:
+                name: static-web-server
           image: curlimages/curl
           name: init
           securityContext:
