chore: use smaller logo for newsletter

--- a/kubernetes/hetzner-personal/applications/static-web-server/configs.env
+++ b/kubernetes/hetzner-personal/applications/static-web-server/configs.env
@@ -1,4 +1,4 @@
 FAVICON_URL=https://developer-friendly.blog/assets/favicon.ico
-LOGO_URL=https://developer-friendly.blog/assets/logo.webp
+LOGO_URL=https://developer-friendly.blog/assets/logo-256x256.webp
 SERVER_CONFIG_FILE=/etc/config.toml
 SERVER_ROOT=/var/public
